# Computer-Science-Labs-and-Projects

./: README.md
Lab3/: ABQ.h  ABS.h  CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  LegoSet.cpp  LegoSet.h  main.cpp
Lab5/: CMakeLists.txt  Spaceship.cpp  Spaceship.h  extrafile.cpp  extrafile.h  main.cpp
Lab6/: CMakeLists.txt  Shapes.cpp  Shapes.h  main.cpp
Labs/: CMakeLists.txt  main.cpp
Labs2/: CMakeLists.txt
Project 2/: CMakeLists.txt  image.cpp  image.h
Project1/: CMakeLists.txt  LinkedList.h  main.cpp
